--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <header>
                     <div class="content">
                         <div class="logo">
-                            <img src="img/logo1.PNG" alt="Logo da pizzaria" id="logom">
+                            <img src="img/logo1.png" alt="Logo da pizzaria" id="logom">
                             <h3>MC PIZZA</h3>
                         </div>
                         <ul class="list-menu">
